test/tests/operators/load_balance/error_bytes_output.txt
error: pipeline must currently end with a sink
 --> tests/operators/load_balance/error_bytes_output.tql:7:20
  |
7 | load_balance $over {
  |                    ^^^^^^^^^^^^^^^ 
  |
